refactor: update security configuration annotation and improve class instantiation method